--- a/src/e_cidadania/templates/site_index-new.html
+++ b/src/e_cidadania/templates/site_index-new.html
@@ -5,94 +5,84 @@
 
 {% block content %}
 
-    <script src="{{ STATIC_URL }}/js/bootstrap-twipsy.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}/js/bootstrap-popover.js" type="text/javascript"></script>
-
     <div class="grid_7">
         
-        <div id="widgetindex">
-            <h2>{% trans "Recent processes"%}</h2><br />
+        <div id="spaces">
+            <h3>{% trans "Recent processes"%}</h3>
             <ul>
-                {% for space in spaces %}
-                    <li><a href="{{ space.get_absolute_url }}" rel="popover" data-content="{{ space.description|safe }}" data-original-title="{{ space.name }}">{{ space.name }}</a>
-                        {% if space.public %}
-                            <span class="label success">{% trans "Public" %}</span>
-                        {% else %}
-                            <span class="label important">{% trans "Private" %}</span>
-                        {% endif %}
-                    </li>
-                    <script>
-                        $(function () {
-                            $("a[rel=popover]")
-                                .popover({
-                                    offset: 10
-                                })
-                            })
-                    </script>
-                    <br />
+                {% for space in space_list %}
+                    <li>{{ space.name }}</li>
                 {% endfor %}
             </ul>
         </div>
         
     </div>
-    
     
     <div class="grid_9">
     
-        <p class="introtitle">e-<strong>cidadania</strong> <span style="font-size:.5em;color:#aaa;">/e.θi.da.'da.nia/</span></p>
-        <p class="intro">e-cidadania es un plataforma desarrollada para la participación ciudadana. Está hecha en software libre con lo que podrás mirar el código si lo deseas y mejorarlo. Bajo ningún concepto vamos a tenerte vigilado ni vamos a hacer nada malo con tus datos. Si deseas hacer tu propia instalación de e-cidadania basta con que sigas la documentación. Pero por el momento... por qué no participas?</p>
+        <p>{% trans "e-cidadania is a citizen participation platform "%}</p>
     
-        <div class="indexbuttons">
-            <a href="{% url 'signup' %}" class="bigbutton orange">{% trans "Register" %}</a> <a href="{% url 'login' %}" class="bigbutton blue">{% trans "Login" %}</a> {% if user.is_staff %}<a href="{% url 'create-space' %}" class="bigbutton black">{% trans "Create your own space" %}</a>{% endif %}
+        <div class="bigbutton">
+            {% trans "Register" %}
+        </div>
+        <div class="bigbutton">
+            {% trans "Log In" %}
         </div>
         
     </div>
 
     <div class="clear"></div>
     
-<!--    <div class="grid_16">-->
-<!--        <div class="bigbutton black count"><strong>13.512</strong> debates en <strong>7.645</strong> procesos participativos</div>-->
-<!--    </div>-->
+    <div class="grid_16">
+        <h1 class="count">7.645 procesos y 13.512 debates. ¿A qué esperas?</h1>
+    </div>
     
     <div class="clear"></div>
     
-    <div class="grid_4">
-    
-        <div id="widgetindex">
-            <h2>{% trans "Recent news" %}</h2><br />
-            <ul>
-                {% for post in publication %}
-                    <li><a href="{{ post.get_absolute_url }}">{{ post.post_title }}</a></li>
-                {% empty %}
-                    <p>{% trans "No public news" %}.</p>
-                {% endfor %}
-            </ul>
-        </div>
-        
+    <div class="grid_5">
     </div>
 
-    <div class="grid_4">
-
-        <div id="widgetindex">
-            <h2>Debates!</h2>
-        </div>
-
+    <div class="grid_5">
     </div>
     
-    <div class="grid_4">
+    <div class="grid_6">
 
-        <div id="widgetindex">
-            <h2>{% trans "Get involved" %}</h2><br />
-            <p>Participa en el desarrollo de e-cidadania. Visita nuestra <a href="http://dev.ecidadania.org">página de desarrollo</a> y echa un vistazo.</p><br />
-            <p>No hace falta que seas programador. Cualquier aptitud nos sirve: traducción, documentación, testeo, programación, etc.</p>
-        </div>
+        <div id="widget">
+            <h2>{% trans "Share" %}</h2><br />
+            <script src="http://widgets.twimg.com/j/2/widget.js"></script>
+            <script>
+                new TWTR.Widget({
+                    version: 2,
+                    type: 'profile',
+                    rpp: 5,
+                    interval: 6000,
+                    width: 'auto',
+                    height: 300,
+                    theme: {
+                        shell: {
+                            background: '#eaeaea',
+                            color: '#666666'
+                        },
+                        tweets: {
+                            background: '#ffffff',
+                            color: '#000000',
+                            links: '#666666'
+                        }
+                    },
+                    features: {
+                        scrollbar: false,
+                        loop: false,
+                        live: false,
+                        hashtags: true,
+                        timestamp: true,
+                        avatars: false,
+                        behavior: 'all'
+                    }
+                }).render().setUser('ecidadaniafloss').start();
+            </script>
 
-    </div>
-    
-    <div class="grid_4">
-
-        <div id="widgetindex">
-            <h2>{% trans "Share" %}</h2><br />            
+            <br />
+            
             <!-- Facebook -->
             <div id="fb-root"></div>
             <script>(function(d, s, id) {
