--- a/src/e_cidadania/templates/comments/form.html
+++ b/src/e_cidadania/templates/comments/form.html
@@ -6,13 +6,23 @@
     {% if field.is_hidden %}
       <div>{{ field }}</div>
     {% else %}
-      {% if field.errors %}{{ field.errors }}{% endif %}
-      <p
-        {% if field.errors %} class="error"{% endif %}
-        {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-        {{ field.label_tag }} {{ field }}
-      </p>
+        <div class="clearfix {% if field.errors %}error{% endif%}" {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
+            <label for="prependedInput">{{ field.label }}</label> 
+            <div class="input"> 
+                {{ field }}
+                <span class="help-inline">
+                    {% if field.errors %}
+                        {% for error in field.errors %}
+                            {{ error|escape }}
+                        {% endfor %}
+                    {% else %}
+                        {{ form.name.help_text }}
+                    {% endif %}
+                </span>
+            </div> 
+        </div>
     {% endif %}
+    
   {% endfor %}
   <p class="submit">
     <input type="submit" name="post" class="submit-post" value="{% trans "Post" %}" />
