Minor fixes and updated documentation

--- a/src/e_cidadania/templates/comments/posted.html
+++ b/src/e_cidadania/templates/comments/posted.html
@@ -4,5 +4,8 @@
 {% block title %}{% trans "Thanks for commenting" %}.{% endblock %}
 
 {% block content %}
-  <h1>{% trans "Thank you for your comment" %}.</h1>
+    <h1>{% trans "Thank you for your comment" %}.</h1>
+
+    <hr />
+    <a href="{% url 'site-index' %}" class="btn small">&laquo; {% trans "Go back" %}</a>
 {% endblock %}
