--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/logout.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/logout.html
@@ -5,8 +5,11 @@
 {% block robots %}noindex,nofollow{% endblock %}
 
 {% block content %}
-<div class="grid_16">
-	<h3>{% trans "Logged out" %}</h3>
-	<p class="large">{% trans "You've been logged out" %}. (<a href="{% url 'profile_overview' %}">{% trans 'Log in again' %}</a>)</p>
-</div>
+    <div class="grid_16">
+    	<h3>{% trans "Logged out" %}</h3>
+    	<p class="large">{% trans "You've been logged out" %}. (<a href="{% url 'profile_overview' %}">{% trans 'Log in again' %}</a>)</p>
+
+        <hr />
+        <a href="{% url 'site-index' %}" class="btn small">&laquo; {% trans "Go back" %}</a>
+    </div>
 {% endblock %}
