--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load range %}
 
 {% block title %}{% trans "View debate " %}{{ debate.title }}{% endblock %}
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
@@ -16,11 +17,13 @@
                 {% trans "View debate " %}{{ debate.title}}
             </div>
 
+            <div id="debate-number" class="hidden">{{ debate.pk }}</div>
+            
             <div id="debate">
                 
-                <table id="debate1" cellspacing="0">
+                <table id="debate{{ debate.pk }}" cellspacing="0">
                     <thead>
-                        <tr id="debate1-headers">
+                        <tr id="debate{{ debate.pk }}-headers">
                             <th id="corner" class="corner-criteria"></th>
                             {% for xvalue in xvalues %}
                                 <th id="debate-vcriteria">{{ xvalue }}</th>
@@ -29,12 +32,24 @@
                     </thead>
                     <tbody id="debate-body">
                         {% for yvalue in yvalues %}
-                            <tr id="debate-row-1">
+                            <tr id="debate-row-{{ forloop.counter }}">
+                                
                                 <td id="debate-hcriteria" class="criteria-title">
                                     <div id="debate-ttitle">{{ yvalue }}</div>
                                 </td>
                                 
-                                <td id="sortable-debate1" class="connectedSortable"></td>
+                                {% for td in xvalues|length|get_range %}
+                                    <td id="sortable-debate{{ forloop.counter }}" class="connectedSortable">
+                                        {% for note in notes %}
+                                            {% if note.parent == ('sortable-debate' + forloop.counter) %}
+                                                <div id="{{ note.noteid }}" class="note">
+                                                    <a href="javascript:getClickedNote()" id="deletenote" class="hidden"></a>
+                                                    <textarea>{{ note.message }}</textarea>
+                                                </div>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </td>
+                                {% endfor %}
                             </tr>
                         {% endfor %}
                         
@@ -44,7 +59,7 @@
                 
                 <br />
                 
-                <a href="javascript:createNote()" id="new-note" class="btn primary small">{% trans "Add new note" %}</a>
+                <span class="btn primary small" id="new-note" onclick="createNote()">{% trans "Add new note" %}</span>
                 <div id="sortable-dispatcher"></div>
                 
             </div>
@@ -53,17 +68,4 @@
 
     {% endblock %}
 
-    {% comment %}
-    {% block rightcol %}
-        <div class="grid_5">
-            <div id="widget">
-             <h2>{% trans "How to add new debates" %}</h2><br/>
-                <ul class="instructions">
-                    <li><strong>{% trans "Modules" %}</strong>: {% trans "Select the
-                            modules you will use in your space. This can be edited afterwards." %}</li>
-                </ul>
-            </div>
-        </div>
-    {% endblock %}
-    {% endcomment %}
 {% endblock %}
